fixed hr and spacing

--- a/wizard/stylesheet/style.css
+++ b/wizard/stylesheet/style.css
@@ -41,9 +41,9 @@ input[type=color]::-webkit-color-swatch {
 }
 
 .panel hr {
-	border-top:1px solid rgba(255,255,255,0.2);
-	margin-top:15px;
-	margin-bottom:15px;
+	border-top:1px solid rgba(255,255,255,0.1); 
+	margin-top:10px;
+	margin-bottom:10px;
 
 }
 
@@ -59,7 +59,7 @@ input[type=checkbox], input[type=radio] {
 	--active-inner: #fff;
 	--focus: 2px rgba(39, 94, 254, .3);
 	--border: #BBC1E1;
-	--border-hover: #275EFE;
+	--border-hover: #17a2b8; 
 	--background: #fff;
 	--disabled: #F6F8FF;
 	--disabled-inner: #E1E6F9;
